profiling-using-exp-runner/recursive-nqueens-remote/experiments/nqueens_experiment/run_5_repetition_0/energibridge.log
sampling interval: 200, target function: solve_n_queens_lru_cache, input size: 4096
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.n_queens as module; board = [[0 for _ in range(4096)] for _ in range(4096)]；X = tuple(map(tuple, board));X = tuple(np.random.random(4096)); module.solve_n_queens_lru_cache(X,0)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.669219161987305 for 0.22622149 sec of execution.
